# check-please

./: .gitignore  CHANGELOG.md  LICENSE  README.cantonese.md  README.md  README.zh-TW.md  SKILL.md  changelog.md  pyproject.toml
agents/: openai.yaml
check_please/: __init__.py  cli.py  data.py  footer_copy.json  hooks.py  html_render.py  models.py  pricing.json  render.py
evals/: evals.json
examples/: visual-acceptance.md
references/: available-fields.md  receipt-style.md  trigger-phrases.md
scripts/: check_please.py  claude_session_end_hook.py  install_claude_auto_trigger.py  uninstall_claude_auto_trigger.py  validate_receipt.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Receipt.tsx
web/lib/: fixture.ts  receipt.ts
